<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_australia">Canberra is the capital of Australia?</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_text">Correct!</string>
    <string name="false_text">Incorrect!</string>
    <string name="next_button">NEXT</string>
    <string name="question_oceans">The Pacific Ocean is larger than  the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea  and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river  in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest  freshwater lake.</string>
    <string name="error_val_text">Error - Cannot proceed, click next or prev</string>
    <string name="back_button">Back</string>
</resources>